# RuneHelper

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  RuneHelper.slnx  vcpkg.json
.github/workflows/: linux-build.yml  msbuild.yml
RuneHelper/: CMakeLists.txt  Config.h  ConfigManager.cpp  ConfigManager.h  Helpers.cpp  Helpers.h  Logger.cpp  LootParser.cpp  LootParser.h  NameNormalizer.cpp  NameNormalizer.h  OCR.cpp  OCR.h  Overlay.cpp  Overlay.h  PriceCache.cpp  RegionSelect.cpp  RegionSelect.h  ResourceHelper.cpp  ResourceHelper.h  RuneHelper.cpp  RuneHelper.filters  RuneHelper.rc  RuneHelper.vcxproj  RuneHelper.vcxproj.filters  ScreenCapture.cpp  UIManager.cpp  UIManager.h  UpdateChecker.cpp  UpdateChecker.h  Version.h  api_dump_raw.json  imgui.ini  prices_dump.json  resource.h
RuneHelper/core/: Config.h  ConfigManager.cpp  ConfigManager.h  DebugData.h  Helpers.cpp  Helpers.h  Logger.cpp  Logger.h  RuneHelperApp.cpp  RuneHelperApp.h  UpdateChecker.cpp  UpdateChecker.h  Version.h
RuneHelper/ocr/: LootParser.cpp  LootParser.h  NameNormalizer.cpp  NameNormalizer.h  OCR.cpp  OCR.h
RuneHelper/platform/: OverlayBackend.h  PlatformPaths.h  UIBackend.h
RuneHelper/platform/linux/: OverlayBackend.cpp  PlatformPaths.cpp  PlatformTypes.h  RegionSelect.cpp  RegionSelect.h  ResourceHelper.cpp  ResourceHelper.h  ScreenCapture.cpp  ScreenCapture.h  UIBackend.cpp  UIManager.cpp
RuneHelper/platform/windows/: OverlayBackend.cpp  PlatformPaths.cpp  RegionSelect.cpp  RegionSelect.h  ResourceHelper.cpp  ResourceHelper.h  ScreenCapture.cpp  ScreenCapture.h  ScreenCaptureDXGI.cpp  ScreenCaptureDXGI.h  UIBackend.cpp
RuneHelper/price/: PriceCache.cpp  PriceCache.h
RuneHelper/resources/: resource.h
RuneHelper/ui/: Overlay.cpp  Overlay.h  OverlayState.h  UIDraw.cpp  UIDraw.h  UIManager.cpp  UIManager.h  UIState.h
cmake/: CompilerOptions.cmake  DependenciesLinux.cmake  DependenciesWindows.cmake  Sources.cmake
